# calculator

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/api/: client.ts
frontend/src/components/: AdminLayout.tsx  CreateCalculatorWizard.tsx  ErrorBoundary.tsx  FormulaExpressionInput.tsx  Guards.tsx  Layout.tsx  SortableCalculatorRow.tsx  SortableCategorySection.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminCalculatorDetailPage.tsx  AdminDashboardPage.tsx  AdminUsersPage.tsx  CalculatorListPage.tsx  CalculatorRunPage.tsx  HistoryPage.tsx  LoginPage.tsx
server/: package-lock.json  package.json
server/migrations/: 001_init.sql  002_sessions.sql  003_categories.sql  004_input_units.sql
server/src/: index.ts
server/src/db/: createUser.ts  migrate.ts  pool.ts  seedAdmin.ts
server/src/middleware/: auth.ts
server/src/routes/: admin.ts  auth.ts  calculators.ts
server/src/services/: formulaEngine.ts  syncFormulaInputs.ts
server/src/utils/: jwt.ts
