[package]
name = "formula-calculator"
version = "1.0.0"
description = "Formula Calculator desktop client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["http-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
